# blender-mcp

./: .gitignore  README.md  README_CN.md  addon.py  bootstrap.ps1  install.ps1  pyproject.toml
blender_extension/: __init__.py  automation.py  blender_manifest.toml  errors.py  lifecycle.py  preferences.py  runtime.py  state.py  ui.py  version.py
docs/: blender-knowledge.md  blender-knowledge_CN.md  geometry-nodes.md  shader-compositor-n0.md  structured-node-automation.md  structured-node-automation_CN.md
examples/: compositor-node-tree-patch.json  compositor-node-tree-snapshot.json  geometry-nodes-patch.json  geometry-nodes-snapshot.json  shader-node-tree-patch.json  shader-node-tree-snapshot.json
schemas/: geometry-nodes-index-v1.json  geometry-nodes-patch-application-v1.json  geometry-nodes-patch-v1.json  geometry-nodes-patch-validation-v1.json  geometry-nodes-v1.json  node-editor-context-v1.json  node-graph-query-v1.json  node-tree-index-v1.json  node-tree-patch-application-v1.json  node-tree-patch-v1.json  node-tree-patch-validation-v1.json  node-tree-v1.json  node-type-schema-v1.json
scripts/: blender_test_runtime.py  blender_test_runtimes.json  build_blender_extension.py  build_release.ps1  build_skill_package.py  run_blender_acceptance.py  verify_release_assets.py
tests/: blender_compositor_initialization.py  blender_compositor_nodes_transactions.py  blender_extension_namespace.py  blender_geometry_nodes_linked.py  blender_geometry_nodes_property_excludes.py  blender_geometry_nodes_readonly.py  blender_geometry_nodes_scale.py  blender_geometry_nodes_writable_edges.py  blender_improve_multi_instance.py  blender_installer_preferences.py  blender_instance_lifecycle.py  blender_multi_instance_host.py  blender_node_bootstrap.py  blender_node_editor_context.py  blender_node_tree_corner_cases.py  blender_node_tree_model_efficiency.py  blender_node_tree_validation.py  blender_node_trees_readonly.py  blender_occupancy_overlay.py  blender_runtime_knowledge.py  blender_shader_compositor_capabilities.py  blender_shader_compositor_dynamic.py  blender_shader_compositor_linked.py  blender_shader_compositor_scale.py  blender_shader_compositor_transactions.py  blender_shader_nodes_transactions.py  (+31 more)
(+97 files in other folders)
