[project]
name = "blender-mcp"
version = "1.15.0"
description = "Blender integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "BlenderMCP Contributors"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
    "httpx>=0.27.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
test = [
    "build>=1.2.2",
    "jsonschema>=4.23.0",
    "pytest>=8.3.0",
    "ruff>=0.9.0",
]

[project.scripts]
blender-mcp = "blender_mcp.app:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"blender_mcp/schemas" = ["schemas/*.json"]

[project.urls]
"Homepage" = "https://github.com/newo-ether/blender-mcp"
"Documentation" = "https://github.com/newo-ether/blender-mcp#readme"
"Bug Tracker" = "https://github.com/newo-ether/blender-mcp/issues"
